[package]
name = "grab-invoices"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["client", "http1"] }
hyper-rustls = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
google-gmail1 = "5.0.5"
chrono = "0.4"
