[package]
name = "grab-invoices"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["client", "http1"] }
hyper-rustls = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
base64 = "0.21"
google-gmail1 = "=5.0.5+20240624"
anyhow = "1.0.100"
